--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "ignis meshi generator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "$(npm bin)/browserify -t babelify src/index.js -o build/index.js",
+    "production-build": "NODE_ENV=production $(npm bin)/browserify -t babelify src/index.js -o build/index.js",
+    "watch-dev": "$(npm bin)/watchify -v -t babelify src/index.js -o build/index.js",
+    "production-watch-dev": "NODE_ENV=production $(npm bin)/watchify -v -t babelify src/index.js -o build/index.js"
   },
   "author": "hsimyu",
   "license": "BSD",
@@ -18,9 +22,6 @@
     "jquery": "~3.1.1",
     "react-bootstrap": "~0.30.7",
     "watchify": "~3.7.0",
-    "vinyl-source-stream": "~1.1.0",
-    "vinyl-buffer": "~1.0.0",
-    "gulp-sourcemaps": "~1.9.1",
     "babel-preset-es2015": "~6.18.0",
     "babel-preset-react": "~6.16.0",
     "bootstrap": "~3.3.7"
