React Dropzoneで画像表示するところまで.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "BSD",
   "dependencies": {
     "react": "~15.4.1",
-    "react-dom": "~15.4.1"
+    "react-dom": "~15.4.1",
+    "react-dropzone": "~3.7.3"
   },
   "devDependencies": {
     "babelify": "~7.3.0",
