--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "react": "~15.4.1",
     "react-dom": "~15.4.1",
-    "react-dropzone": "~3.7.3"
+    "react-dropzone": "~3.7.3",
+    "redux": "~3.6.0",
+    "react-redux": "~4.4.6"
   },
   "devDependencies": {
     "babelify": "~7.3.0",
